--- a/analysis.org
+++ b/analysis.org
@@ -161,76 +161,81 @@ mv POBI.sample POBIx.sample
 :PROPERTIES:
 :session: *R-PoBI*
 :dir: /davison@oak.well.ox.ac.uk:bench
+:results: silent
 :END:
 ** Environment
-#+begin_src R :results silent
+#+begin_src R
   PATH <- "/home/davison/src/shellfish/bin"
+  system("mkdir -p rdata rlegend flipind frdata freq lines")
   
   chroms <- sprintf("%02d", 22)
   nwtccc2 <- 8267
-  wfile <- function(chr) sprintf("data/POBI+MS/%s-allx.gen", chr)
-  wrfile <- function(chr) sprintf("POBI+MS-%sr.gen", chr)
-  wflippedfile <- function(chr) sprintf("data/POBI+MS/%s-allx-flipped.gen", chr)
-  wlinesfile <- function(chr) sprintf("%s.lines", chr)
-  wfreqfile <- function(chr) sprintf("%s-w.freq", chr)
   
-  hapfile <- function(chr) sprintf("data/HM3/CEU+TSI.chr%d.hap", as.integer(chr))
-  hlinesfile <- function(chr) sprintf("%s.h.lines", chr)
-  hfreqfile <- function(chr) sprintf("%s-h.freq", chr  hfile <- function(chr) sprintf("data/HM3/hapmap3.r2.b36.chr%d.legend", as.integer(chr))
-  hrfile <- function(chr) sprintf("hapmap3-%sr.gen", chr)
-  flipindfile <- function(chr) sprintf("%s.flipind", chr)
+  datafile <- function(chr, dataset=c("h","w"))
+      switch(match.arg(dataset),
+             h = sprintf("data/HM3/CEU+TSI.chr%d.hap", as.integer(chr)),
+             w = sprintf("data/POBI+MS/%s-allx.gen", chr))
+  legendfile <- function(chr, dataset=c("h","w"))
+      switch(match.arg(dataset),
+             h = sprintf("data/HM3/hapmap3.r2.b36.chr%d.legend", as.integer(chr)),
+             w = error("No need for this"))
+  rdatafile <- function(chr, dataset)
+      sprintf("rdata/%s-%s.gen", dataset, chr)
+  rlegendfile <- function(chr, dataset)
+      sprintf("rlegend/%s-%s.legend", dataset, chr)
+  frdatafile <- function(chr, dataset)
+      sprintf("frdata/%s-%s.gen", dataset, chr)
+  linesfile <- function(chr, dataset)
+      sprintf("lines/%s-%s.lines", dataset, chr)
+  freqfile <- function(chr, dataset)
+      sprintf("freq/%s-%s.freq", dataset, chr)
+  flipindfile <- function(chr, dataset)
+      sprintf("flipind/%s-%s.flip", dataset, chr)
 #+end_src
 
- #+begin_src R :results silent
-  h <- lapply(hfile(chroms), read.table, header=TRUE, as.is=TRUE, col.names=c("rs","pos","a0","a1"))
-  w <- lapply(chroms, function(chr)
-              read.table(pipe(sprintf("cut -d' ' -f2-5 < %s", wfile(chr))),
+#+begin_src R
+  dd <- list()
+  dd$h <- lapply(legendfile(chroms, "h"), read.table, header=TRUE, as.is=TRUE, col.names=c("rs","pos","a0","a1"))
+  dd$w <- lapply(chroms, function(chr)
+              read.table(pipe(sprintf("cut -d' ' -f2-5 < %s", datafile(chr,"w"))),
                          header=FALSE, as.is=TRUE, col.names=c("rs","pos","a0","a1")))
-  names(h) <- names(w) <- chroms
+  names(dd$h) <- names(dd$w) <- chroms
   
-  d <- data.frame(row.names=chroms)
-  d$Lh <- sapply(h, nrow)
-  d$Lw <- sapply(w, nrow)
-  d$hinw <- mapply(function(h, w) sum(h$rs %in% w$rs), h, w, SIMPLIFY=FALSE)
-  d$winh <- mapply(function(h, w) sum(w$rs %in% h$rs), h, w, SIMPLIFY=FALSE)
+  df <- data.frame(row.names=chroms)
+  df$Lh <- sapply(dd$h, nrow)
+  df$Lw <- sapply(dd$w, nrow)
+  df$hinw <- mapply(function(h, w) sum(h$rs %in% w$rs), dd$h, dd$w, SIMPLIFY=FALSE)
+  df$winh <- mapply(function(h, w) sum(w$rs %in% h$rs), dd$h, dd$w, SIMPLIFY=FALSE)
 #+end_src
-** 
-** Restrict WTCCC2 to intersection of SNPs with HapMap3
+
+** Restrict to intersection
 We're going to flip WTCCC2 to match HapMap3
 #+begin_src R
-  ## intersect and order by HapMap physical position
-  isect <- mapply(merge, h, w, MoreArgs=list(by="rs"), SIMPLIFY=FALSE)
-  isect <- lapply(isect, function(d) d[order(d$pos.x),])
+  isect <- mapply(merge, dd$h, dd$w, MoreArgs=list(by="rs"), SIMPLIFY=FALSE)
+  isect <- lapply(isect, function(i) i[order(i$pos.x),])
   
   ## Write line indices for WTCCC2 and create restricted file
   for(c in chroms) {
-      map <- match(w[[c]]$rs, isect[[c]]$rs)
-      w[[c]]$inisect <- inisect <- !is.na(map)
-      cat(map[inisect], sep="\n", file=wlinesfile(c))
-      cmd <- sprintf("%s/lines -f %s < %s > %s", PATH, wlinesfile(c), wfile(c), wrfile(c))
-      print(cmd)
-      system(cmd)
-  }
-  
-  ## Write line indices for HapMap3 and create restricted file
-  for(c in chroms) {
-      map <- match(h[[c]]$rs, isect[[c]]$rs)
-      h[[c]]$inisect <- inisect <- !is.na(map)
-      cat(map[inisect], sep="\n", file=hlinesfile(c))
-      cmd <- sprintf("%s/lines -f %s < %s > %s", PATH, hlinesfile(c), hfile(c), hrfile(c))
-      print(cmd)
-      system(cmd)
+      for(d in c("w","h")) {
+          map <- match(dd[[d]][[c]]$rs, isect[[c]]$rs)
+          dd[[d]][[c]]$inisect <- inisect <- !is.na(map)
+          cat(map[inisect], sep="\n", file=linesfile(c, d))
+          cmd <- paste(file.path(PATH, "lines"),
+                       "-f", linesfile(c, d),
+                       "<", if(d == "w") datafile(c, "w")  else legendfile(c, "h"),
+                       ">", if(d == "w") rdatafile(c, "w") else rlegendfile(c, "h"))
+          print(cmd)
+          system(cmd)
+      }
   }
 #+end_src
-
-#+results[c732f9f10ccf26d95564fb1331a99b9f3bad4ea1]:
-: 0
 
 ** Flip the WTCCC2 genotypes to match HapMap3 strand
 *** Construct flip indicator files
 #+begin_src R
   flipind <- function(df) {
       tmpf <- tempfile()
+      on.exit(file.remove(tmpf))
       alleles <- df[,c("a0.x", "a1.x","a0.y","a1.y")]
       ind <- rep(4, nrow(alleles))
       ok <- apply(alleles, 1, function(a) all(a %in% c("A","C","G","T")))
@@ -239,16 +244,17 @@ We're going to flip WTCCC2 to match HapMap3
       ind
   }
   
-  for(chr in names(isect)) {
-      ## isect[[chr]]$flipind <- flipind(isect[[chr]])
-      cat(flipind(isect[[chr]]), file=flipindfile(chr), sep="\n")
-  }
+  for(c in chroms)
+      cat(flipind(isect[[c]]), file=flipindfile(c, "w"), sep="\n")
 #+end_src
-*** Flip
+*** Flip WTCCC2 PoBI+MS
 #+begin_src R
   for(chr in rev(chroms)) {
     cmd <- sprintf("%s/%s -i %s -n %02d < %s > %s",
-    PATH, "flipgen", flipindfile(chr), nwtccc2, wrfile(chr), wflippedfile(chr))
+                   PATH, "flipgen",
+                   flipindfile(chr, "w"),
+                   nwtccc2, rdatafile(chr, "w"),
+                   frdatafile(chr, "w"))
     print(cmd)
     system(cmd)
   }
@@ -258,24 +264,21 @@ We're going to flip WTCCC2 to match HapMap3
   freq <- lapply(chroms, list)
   for(c in chroms) {
       ## Read in hapmap haplotypes in intersection
-      p <- pipe(sprintf("%s/%s -f %s < %s", PATH, "lines", hlinesfile(c), hapfile(c)))
+      p <- pipe(sprintf("%s/%s -f %s < %s", PATH, "lines", linesfile(c,"h"), datafile(c, "h")))
       freq[[c]]$h <- colMeans(matrix(scan(p, what=integer()), nrow=410))
-      cat(freq[[c]]$h, sep="\n", file=hfreqfile(c))
+      cat(freq[[c]]$h, sep="\n", file=freqfile(c,"h"))
       
       ## Create w freq file
-      cmd <- sprintf("%s/lines -f %s < %s | %s/sstat -p -n 8267 > %s", PATH, wlinesfile(c), wfile(c), PATH, wfreqfile(c))
+      cmd <- sprintf("%s/lines -f %s < %s | %s/sstat -p -n 8267 > %s", PATH, linesfile(c,"w"), datafile(c,"w"), PATH, freqfile(c,"w"))
       print(cmd)
       system(cmd)
-      freq[[c]]$w <- scan(wfreqfile(c))
+      freq[[c]]$w <- scan(freqfile(c,"w"))
   
       png(file=sprintf("%s-freqs.png", c))
-      plot(freq[[c]]$h, freq[[c]]$w)
+      plot(freq[[c]]$h, freq[[c]]$w, xlab="HapMap3",ylab="PoBI+MS")
       dev.off()
   }
 #+end_src
-
-#+results[0f6a027f776f4f14e8147e64bccf1b4a80726420]:
-: 1
 
 * TODO Phasing
 * PCA
